--- a/force-app/main/default/aura/Calculator/Calculator.cmp
+++ b/force-app/main/default/aura/Calculator/Calculator.cmp
@@ -1,4 +1,4 @@
-<aura:component>
+<aura:component implements="flexipage:availableForAllPageTypes" access="global">
     <aura:attribute name="num1" type="Integer"/>
     <aura:attribute name="num2" type="Integer"/>
     <aura:attribute name="output" type="Integer"/>
