--- a/force-app/main/default/pages/Calculator.page
+++ b/force-app/main/default/pages/Calculator.page
@@ -1,6 +1,10 @@
-<apex:page>
-<!-- Begin Default Content REMOVE THIS -->
-<h1>Congratulations</h1>
-This is your new Page
-<!-- End Default Content REMOVE THIS -->
+<apex:page controller="Calculator" lightningStylesheets="true">
+    <apex:form >
+        <apex:pageBlock >
+            Enter Number 1 : <apex:inputText value="{!num1}"/><br/>
+            Enter Number 2 : <apex:inputText value="{!num2}"/><br/>
+            <apex:commandButton value="add" action="{!addition}"/><br/>
+            Output Number : <apex:outputText value="{!num1}"/>
+        </apex:pageBlock>
+    </apex:form>
 </apex:page>
